# blindbrowser

./: .Makefile.swp  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  blindbrowser.pro  build_clion.py  classes.py  main.cpp  main.py
conan/: conanfile.txt
headers/: AddressBar.h  AddressBar.hpp  Dictionary.hpp  Keyboard.hpp  MatrixWidget.hpp  PyFunctions.hpp  Window.hpp
pyfiles/: MainClasses.py  MinorClasses.py  functions.py
python_files/: MainClasses.py  MinorClasses.py  PyFunctions.cpp  classes.py  functions.py  main.py
src/: AddressBar.cpp  Dictionary.cpp  Keyboard.cpp  MatrixWidget.cpp  PyFunctions.cpp  Window.cpp
